Update configs and basic layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,20 @@
+# Plugins
+plugins:          [jekyll-paginate, jekyll-gist]
+
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+gems:             [jekyll-paginate]
+markdown:         kramdown
+highlighter:      Rouge
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+#relative_permalinks: true
 
 # Setup
 title:            Alexander Spaulding
 tagline:          'Full-Stack Developer'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+description:      'A full stack Developer proficent in web and software technologies.'
+url:              
 baseurl:          /
 
 author:
@@ -20,7 +24,7 @@ author:
 paginate:         5
 
 # Custom vars
-version:          2.1.0
+version:          1.0.0
 
 github:
   repo:           https://github.com/poole/hyde
