--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink:        pretty
 # Setup
 title:            Alexander Spaulding
 tagline:          'Full-Stack Developer'
-description:      'I am a full stack software and web developer that likes to explore as much as I can in the computer science field. 
+description:      'I am a full stack software and web developer exploring various techonologies in my free time. 
   This blog will server as a collection of my experiences in hopes that other developers can find some use from them.'
 url:              
 baseurl:          /
